# compositor

./: .gitmodules  CMakeLists.txt  README.md
docs/: CMakeLists.txt
docs/doxygen/: directories.dox  modules.dox  namespaces.dox
docs/latex/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/elysium/server/: CMakeLists.txt  abstract-global.cpp  abstract-global.hpp  client-list.cpp  client-list.hpp  client.cpp  client.hpp  compositor.cpp  compositor.hpp  display.cpp  display.hpp  main-loop.cpp  main-loop.hpp  seat.cpp  seat.hpp  session.cpp  session.hpp  shell.cpp  shell.hpp  surface-list.cpp  surface-list.hpp  window-manager.cpp  window-manager.hpp  xdg-shell.cpp  xdg-shell.hpp  xdg-surface.cpp  xdg-surface.hpp
